--- a/Photo_Uploader/Templates/Picr/Base.html
+++ b/Photo_Uploader/Templates/Picr/Base.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="http://assets.jackandmeg.com/jackandmeg/assets/css/bootstrap.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.no-icons.min.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 20px;
@@ -51,8 +51,7 @@
       {% block styles %}
 
       {%endblock styles %}
-    <link href="http://assets.jackandmeg.com/jackandmeg/assets/css/bootstrap-responsive.css" rel="stylesheet">
-
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet">
   </head>
 
   <body>
@@ -80,18 +79,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/jquery.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-transition.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-alert.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-modal.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-dropdown.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-scrollspy.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-tab.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-tooltip.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-popover.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-button.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-collapse.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-carousel.js"></script>
-    <script src="http://assets.jackandmeg.com/jackandmeg/assets/js/bootstrap-typeahead.js"></script>
-
+    <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
   </body>
 </html>
