Added search functionality

--- a/Photo_Uploader/Templates/Picr/index.html
+++ b/Photo_Uploader/Templates/Picr/index.html
@@ -13,5 +13,14 @@
       <a class="btn btn-large btn-success" href="/gallery">View the gallery</a>
       </div>
 
+<div class="jumbotron">
+	<h2> Search for an image! </h2>
+	<form class="form-signin" action="/search/" method="get">
+        <input type="text" class="input-block-level" placeholder="Tags" name="search">
+        <button class="btn btn-large btn-primary" type="submit">Search</button>
+      </form>
+</div>
+
+
 
 {% endblock content %}
