--- a/Photo_Uploader/Templates/Picr/gallery.html
+++ b/Photo_Uploader/Templates/Picr/gallery.html
@@ -1,18 +1,22 @@
-{% extends "Picr/Base.html" %}
+{% extends "Picr/gallery_base.html" %}
+
+
+
 {% block content %}
 
+<ul class="thumbnails">
+
 {% for x in gallery_dict %}
-<ul class="thumbnails span4">
+
   <li>
-    <div class="thumbnail">
-      <img src="/Images/{{x.image_filename}}" alt="">
+    <div class="thumbnail pull-right">
+      <a href="/Images/{{x.image_filename}}"> <img src="/Images/{{x.image_filename}}" alt=""></a>
       <p>{{x.image_tags}}</p>
     </div>
   </li>
-</ul>
 
 
 {% endfor %}
-
+</ul>
 
 {% endblock content %}
